# verzeichnisdienst-python-models

./: README.md  domain-specific-terms.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml  coverage.yml  dev_test.yml  formatting.yml  packaging_test.yml  prettier.yml  python-publish.yml  pythonlint.yml  unittests.yml
openapi/v1/: openapi.yml  openapi_websocket.yml
src/: _verzeichnisdienst_version.py
unittests/: example_jsons_v1.py  example_ws_jsons_v1.py  test_models_v1.py  test_ws_models_v1.py
