[project]
name = "verzeichnisdienst"
description = "Model classes for the Verzeichnisdienst API by EDI@Energy"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "your name", email = "info+github@hochfrequenz.de" }]
keywords = ["Verzeichnisdienst", "EDI@Energy", "BDEW"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pydantic>=2"] # add all the dependencies here
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==8.4.2"
]
linting = [
    "pylint==3.3.9"
]
type_check = [
    "mypy[pydantic]==1.19.1"
]
spell_check = [
    "codespell==2.4.1"
]
coverage = [
    "coverage==7.10.7"
]
formatting = [
    "black==25.11.0",
    "isort==6.1.0"
]
packaging = [
    "build==1.4.0",
    "twine==6.2.0"
]
codegen = [
    "datamodel-code-generator==0.45.0"
]
dev = [
    "pip-tools"
]


[project.urls]
Changelog = "https://github.com/Hochfrequenz/verzeichnisdienst-python-models/releases"
Homepage = "https://github.com/Hochfrequenz/verzeichnisdienst-python-models"

[tool.black]
line-length = 120
target_version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[[tool.mypy.overrides]]
module = ["verzeichnisdienst.v1._autogenerated", "verzeichnisdienst.v1._autogenerated_websocket"]
ignore_errors = true


[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_verzeichnisdienst_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
